<resources>
    <string name="app_name">SNS</string>
    <string name="mbti_estj">MBTI: ESTJ</string>
    <string name="text_state">오늘은 공연으로 부재 중입니다.</string>
    <string name="text_ViewMore">더보기</string>
    <string name="text_ViewClose">접기</string>
    <string name="et_commentHint">댓글달기</string>
    <string name="signIn_email">이메일</string>
    <string name="signIn_email_et">이메일을 입력하세요</string>
    <string name="signIn_pw">비밀번호</string>
    <string name="signIn_pw_et">비밀번호를 입력하세요</string>
    <string name="signIn_login">로그인</string>
    <string name="signIn_signUp">회원가입</string>
    <string name="signUp_name">이름</string>
    <string name="signUp_name_et">이름을 입력하세요</string>
    <string name="signUp_repeatCheck_btn">중복체크</string>
    <string name="signUp_cancel_btn">취소</string>
    <string name="signUp_done_btn">완료</string>
    <string name="toast_msg_idpwNoInput">아이디/비밀번호를 확인해주세요.</string>
    <string name="toast_msg_cancel">취소하셨습니다</string>
    <string name="toast_msg_noInput">입력되지 않은 정보가 있습니다</string>
    <string name="toast_msg_notEmailForm">이메일 형식을 지켜주세요</string>
    <string name="toast_msg_signUp">회원가입 성공!</string>
    <string name="teamName">커피4조</string>
    <string name="conRefresh">새로운 컨텐츠 없음</string>
    <string name="username">사용자 이름</string>
    <string name="description_text">설명 텍스트</string>
    <string name="comment_text">댓글 텍스트</string>
    <string name="toast_msg_impossibleEmail">이미 사용중인 이메일입니다</string>
    <string name="toast_msg_possibleEmail">사용 가능한 이메일입니다</string>
    <string name="toast_msg_checkEmail">이메일 중복체크를 해주세요</string>
    <string name="mypage_title">커피4조</string>
    <string name="mypage_name">이름</string>
    <string name="mypage_etname">이름</string>
    <string name="mypage_greeting">간단한 자기소개 쓰기\n\n\n\n\n\n</string>
    <string name="mypage_etgreeting">간단한 자기소개 쓰기\n\n\n\n\n\n</string>
    <string name="mypage_mbtiType">성격유형 :</string>
    <string name="mypage_mbti">INFP</string>
    <string name="mypage_etMbti">INFP</string>
    <string name="mypage_hobbyTitle">취미:</string>
    <string name="mypage_hobby">등산, 카페 탐방, 우표 수집, 십자수, 사이클링, 수영, 음악 듣기, 마술, 종이접기, 회화, 애완동물, 우취, 악기 연주, 도예, 퍼즐, 조각, 바느질, 노래 부르기</string>
    <string name="mypage_etHobby">취미: 등산, 카페 탐방, 우표 수집, 십자수, 사이클링, 수영, 음악 듣기, 마술, 종이접기, 회화, 애완동물, 우취, 악기 연주, 도예, 퍼즐, 조각, 바느질, 노래 부르기</string>
    <string name="mypage_friendName">김경식</string>
    <string name="mypage_interest">관심사</string>
    <string name="mypage_interest2">등산</string>
    <string name="mypage_interest3">관심사</string>
    <string name="mypage_interest4">연애</string>
    <string name="mypage_interest5">관심사</string>
    <string name="mypage_postName">글제목이다아아아아</string>
    <string name="mypage_postContent">본문이다아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아</string>
</resources>